--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: 0;
+}
+
 body{
     position: relative;
     background: #fbf8f8f8;
 }
 
+.logo{
+    margin-top: 10px;
+    width: 70px;
+    height: 60px;
+}
+
 header {
     background: #01B0EB;
     left: 0;
-    max-height: 75px;
+    max-height: 200px;
     position: fixed;
     right: 0;
     top: 0;
     z-index: 6; /** propriedade que mostra a camada **/
-    
     align-items: center;
     -ms-flex-pack: center;
     display: -ms-flexbox;
@@ -25,25 +37,54 @@ header {
 
 h1{ 
     justify-content: left;
-    -ms-flex-align: left;
+    margin-top: 10px;
     margin-left: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-family: 'Barlow', sans-serif;
-    font-style: bold;
 }
 
 .first{
+    display: flex;
+    flex-direction: column;
+    align-items: column;
     width: 100%;
     position: absolute;
     right: 0pt;
     height: 453px;
+    max-height: 1000px;
     left: 0pt;
     top: 130px;
     background: #FEFEFE;
+    box-shadow: 0 0 1em rgb(194, 200, 206);
+
 }
+
+.validator {
+    box-shadow: inset 0 0 1em rgb(37, 149, 223), 0 0 1em rgb(174, 179, 185);
+    background: #01B0EB;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+    width: 250px;
+    border-radius: 20px;
+    top: 95px;
+    margin-inline-start: 10%;
+    padding: 70px;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: bold;
+}
+
 .img {
+    display: flex;
+    flex-direction: column;
+    align-items: column;
     position: absolute;
     right: 0;
-    top: 130px;
-    width: 672px;
+    top: 0;
+    width: 680px;
 }
