--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -13,13 +13,14 @@ body{
 }
 
 .logo{
-    margin-top: 10px;
-    width: 70px;
-    height: 60px;
+    margin-left: 5px;
+    margin-top: 5px;
+    width: 50px;
+    height: 40px;
 }
 
 header {
-    background: #01B0EB;
+    background: #8DC63F;
     left: 0;
     max-height: 200px;
     position: fixed;
@@ -39,62 +40,68 @@ h1{
     margin-top: 10px;
     margin-left: 10px;
     margin-bottom: 10px;
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Righteous', cursive;
 }
 
+
 .first{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     position: absolute;
+    display: flex;
+    width: 100%;
     right: 0pt;
     height: 453px;
     max-height: 1000px;
     left: 0pt;
     top: 130px;
-    background: #FEFEFE;
+    background: url(/src/img/fundoverde.png);
     box-shadow: 0 0 1em rgb(194, 200, 206);
+    font-size: 0;
 
 }
-
-.validator { 
-    box-shadow: inset 0 0 1em rgb(37, 149, 223), 0 0 1em rgb(174, 179, 185);
-    background: #01B0EB;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
+.read{
     z-index: 2;
-    width: 250px;
+    width: 50%;
+    min-width: 250px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: bold;
+    color: white;
+    left: 5%;
+}
+.div{ 
+    margin: 75px;
+    margin-top: 75px;
+    min-width: 250px;
+    display: inline-block;
+    vertical-align: top;
+}
+.validator { 
+    margin: 75px;
+    z-index: 2;
+    box-shadow: inset 0 0 1em #8ab44e, 0 0 1em #979717;
+    background: #8DC63F;
+    width: 35%;
     border-radius: 20px;
-    top: 95px;
-    margin-inline-start: 10%;
     padding: 70px;
-    align-items: center;
-    align-content: center;
     text-align: center;
     font-size: 20px;
     font-family: 'Barlow', sans-serif;
     font-weight: bold;
 }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-    
-/* Firefox */
-input[type=number] {
-    -moz-appearance: textfield;
+input{
+    padding: 5px 30px;
+    margin: 20px;
+    color: rgb(255, 122, 0);
 }
 .button1 {
+    cursor: pointer;
     padding: 5px 70px;
+    background-color: rgb(255, 122, 0);
 }
-.img {
-    display: flex;
-    flex-direction: column;
-
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 680px;
+.span {
+    color: white;
+    font-size: 15px;
 }
