--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ h1{
     max-height: 1000px;
     left: 0pt;
     top: 130px;
-    background: url(/img/fundoverde.png);
+    background: url(./img/fundoverde.png);
     box-shadow: 0 0 1em rgb(194, 200, 206);
     font-size: 0;
 
