--- a/style.css
+++ b/style.css
@@ -53,11 +53,14 @@ h1{
     max-height: 1000px;
     left: 0pt;
     top: 130px;
-    background: url(/src/img/fundoverde.png);
     box-shadow: 0 0 1em rgb(194, 200, 206);
     font-size: 0;
 
 }
+.imgg{
+    top: 0;
+}
+
 .read{
     z-index: 2;
     width: 50%;
@@ -104,4 +107,18 @@ input{
 .span {
     color: white;
     font-size: 15px;
+}
+.result {
+    margin: 75px;
+    z-index: 2;
+    box-shadow: inset 0 0 1em #8ab44e, 0 0 1em #979717;
+    background: #8DC63F;
+    width: 35%;
+    border-radius: 20px;
+    padding: 70px;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: bold;
+    display: none;
 }
