--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ h1{
     z-index: 2;
     width: 50%;
     min-width: 250px;
-    display: inline-block;
     vertical-align: top;
     text-align: center;
     font-size: 20px;
@@ -78,8 +77,7 @@ h1{
     margin: 75px;
     margin-top: 75px;
     min-width: 250px;
-    display: inline-block;
-    vertical-align: top;
+    display: block;
 }
 .validator { 
     margin: 75px;
@@ -103,17 +101,22 @@ input{
     cursor: pointer;
     padding: 5px 70px;
     background-color: rgb(255, 122, 0);
+    border-radius: 10px;
 }
 .span {
     color: white;
     font-size: 15px;
 }
 .result {
-    margin: 75px;
+    overflow: hidden;
+    position: absolute;
+    top: 74px;
+    left: 74px;
+    right: 74px;
+    bottom: 74px;
     z-index: 2;
     box-shadow: inset 0 0 1em #8ab44e, 0 0 1em #979717;
     background: #8DC63F;
-    width: 35%;
     border-radius: 20px;
     padding: 70px;
     text-align: center;
@@ -121,4 +124,12 @@ input{
     font-family: 'Barlow', sans-serif;
     font-weight: bold;
     display: none;
+   
+}
+
+.button2 {
+    cursor: pointer;
+    padding: 5px 70px;
+    background-color: rgb(255, 122, 0);
+    border-radius: 10px;
 }
