--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,7 @@ input{
 }
 
 .button2 {
+    margin-top: 10px;
     cursor: pointer;
     padding: 5px 70px;
     background-color: rgb(255, 122, 0);
