--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,7 @@ input{
     color: rgb(255, 122, 0);
 }
 .button1 {
+    color:white;
     cursor: pointer;
     padding: 5px 70px;
     background-color: rgb(255, 122, 0);
@@ -128,9 +129,24 @@ input{
 }
 
 .button2 {
-    margin-top: 10px;
+    color: white;
+    margin-top: 40px;
     cursor: pointer;
     padding: 5px 70px;
     background-color: rgb(255, 122, 0);
     border-radius: 10px;
+}
+footer{
+    overflow: hidden;
+    width: 100%;
+    height: 28px;
+    position: absolute;
+    top: 630px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    font-family: 'Righteous', cursive;
+    background: rgb(255, 122, 0);
+    color: white;
 }
