--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,6 @@
 }
 
 body{
-    position: relative;
     background: #fbf8f8f8;
 }
 
@@ -104,6 +103,17 @@ input{
     background-color: rgb(255, 122, 0);
     border-radius: 10px;
 }
+.button1:hover, .button1:focus {
+  color: #fff;
+  outline: 0;
+}
+.animation {
+-webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+.animation:hover {
+box-shadow: 0 0 40px 40px #c75f0a inset;
+}
 .span {
     color: white;
     font-size: 15px;
@@ -136,17 +146,24 @@ input{
     background-color: rgb(255, 122, 0);
     border-radius: 10px;
 }
+.button2:hover, .button2:focus {
+    color: #fff;
+    outline: 0;
+}
 footer{
-    overflow: hidden;
+    overflow-y: hidden;
     width: 100%;
     height: 28px;
     position: absolute;
-    top: 630px;
     bottom: 0;
     right: 0;
     left: 0;
     text-align: center;
     font-family: 'Righteous', cursive;
     background: rgb(255, 122, 0);
+    color: white;
+}
+
+.link{
     color: white;
 }
