--- a/style.css
+++ b/style.css
@@ -1,24 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-*{
+@font-face {
+    font-family: 'Barlow';
+    src: url(./font/Barlow/Barlow-Bold.ttf) format('truetype'),
+    url(./font/Barlow/OFL.txt) format('opentype');
+    font-weight: 500;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Righteous';
+    src: url(./font/Righteous/Righteous-Regular.ttf) format('truetype'),
+    url(./font/Righteous/OFL.txt) format('opentype');
+    font-weight: 500;
+    font-style: normal;
+}
+* {
     padding: 0;
     margin: 0;
     border: 0;
     box-sizing: 0;
 }
 
-body{
+.page {
     background: #fbf8f8f8;
 }
 
-.logo{
+.logo {
     margin-left: 5px;
     margin-top: 5px;
     width: 50px;
     height: 40px;
 }
 
-header {
+.menu {
     background: #8DC63F;
     left: 0;
     max-height: 200px;
@@ -34,7 +46,7 @@ header {
     font-weight: bold; 
 }
 
-h1{ 
+.titleBank { 
     justify-content: left;
     margin-top: 10px;
     margin-left: 10px;
@@ -43,7 +55,7 @@ h1{
 }
 
 
-.first{
+.first {
     position: absolute;
     display: flex;
     width: 100%;
@@ -56,11 +68,12 @@ h1{
     font-size: 0;
 
 }
-.imgg{
+.imgg {
     top: 0;
 }
 
-.read{
+.read {
+
     z-index: 2;
     width: 50%;
     min-width: 250px;
@@ -71,12 +84,19 @@ h1{
     font-weight: bold;
     color: white;
     left: 5%;
+    text-shadow: 0 0 #000000;
 }
-.div{ 
+.allSections { 
     margin: 75px;
     margin-top: 75px;
     min-width: 250px;
     display: block;
+}
+.titleRead {
+    margin-bottom: 30px;
+}
+.paragraph-read {
+    margin-bottom: 20px;
 }
 .validator { 
     margin: 75px;
@@ -91,12 +111,14 @@ h1{
     font-family: 'Barlow', sans-serif;
     font-weight: bold;
 }
-input{
+.input-number{
     padding: 5px 30px;
     margin: 20px;
     color: rgb(255, 122, 0);
 }
 .button1 {
+    font-family: "Barlow";
+    margin: 5px;
     color:white;
     cursor: pointer;
     padding: 5px 70px;
@@ -139,6 +161,7 @@ box-shadow: 0 0 40px 40px #c75f0a inset;
 }
 
 .button2 {
+    font-family: "Barlow";
     color: white;
     margin-top: 40px;
     cursor: pointer;
@@ -147,10 +170,10 @@ box-shadow: 0 0 40px 40px #c75f0a inset;
     border-radius: 10px;
 }
 .button2:hover, .button2:focus {
-    color: #fff;
+    color: white;
     outline: 0;
 }
-footer{
+.baseboard{
     overflow-y: hidden;
     width: 100%;
     height: 20px;
@@ -159,11 +182,12 @@ footer{
     right: 0;
     left: 0;
     text-align: center;
-    font-family: 'Righteous', cursive;
+    font-family: 'Righteous', cursive, sans-serif;
     background: rgb(255, 122, 0);
-    color: white;
+    color: black;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
-
-.link{
-    color: white;
+.link {
+    color: #4d6827;
 }
